--- a/src/main/webapp/stomp.html
+++ b/src/main/webapp/stomp.html
@@ -132,7 +132,7 @@
             class="form-control"
             size="40"
             style="width: 350px"
-            value="/stomp-websocket"
+            value="/stomp.ws"
           />
         </div>
         <div>
