--- a/src/main/webapp/annotation.html
+++ b/src/main/webapp/annotation.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ws</title>
+    <title>annotation</title>
   </head>
   <body>
     <textarea id="message"></textarea>
@@ -20,7 +20,9 @@
 
       window.onload = function () {
         if ("WebSocket" in window) {
-          websocket = new WebSocket("ws://" + host + "/annotation.ws?userId=1");
+          websocket = new WebSocket(
+            "wss://" + host + "/annotation.ws?userId=1"
+          );
         } else if ("MozWebSocket" in window) {
           websocket = new MozWebSocket(
             "ws://" + host + "/annotation.ws?userId=1"
