--- a/src/main/webapp/annotation.html
+++ b/src/main/webapp/annotation.html
@@ -20,7 +20,10 @@
 
       window.onload = function () {
         if ("WebSocket" in window) {
-          websocket = new WebSocket("ws://" + host + "/annotation.ws?userId=1");
+          websocket =
+            window.location.protocol === "http:"
+              ? new WebSocket("ws://" + host + "/annotation.ws?userId=1")
+              : new WebSocket("wss://" + host + "/annotation.ws?userId=1");
         } else if ("MozWebSocket" in window) {
           websocket = new MozWebSocket(
             "ws://" + host + "/annotation.ws?userId=1"
